package com.erdees.farmdataexercise.coreUtils

object TestTags {


    const val SIGN_IN_TAG = "sign_in"
    const val SIGN_IN_BUTTON_TAG = "sign_in_btn"
    const val SIGN_IN_EMAIL = "sign_in:email"
    const val SIGN_IN_PASSWORD = "sign_in:password"

    const val SIGN_UP_TAG = "sign_up"

    const val SIGN_UP_EMAIL = "SIGN_UPMAIL"
    const val SIGN_UP_PASSWORD = "sign_up_password"
    const val SIGN_UP_CONFIRMPASSWORD = "_sign_up_confirm_password"
    const val SIGN_UP_NAME = "_sign_up_name"
    const val SIGN_UP_LASTNAME = "_sign_up_LASName"

    const val SIGN_UP_BUTTON_TAG = "sign_up_btn"
    const val NAVIGATE_FROM_SIGN_UP_TO_SIGN_IN_BUTTON = "navigate_from_sign_up_to_sign_in_btn"

    const val ALERT_DIALOG_TAG = "alert_dialog_tag"


    const val PROFILE_SCREEN_TAG = "profile_screen_tag"

    const val PROGRESS_BAR_TAG = "progress_bar"

    const val NAVIGATE_FROM_SIGN_IN_TO_SIGN_UP_BTN = "navigate_to_sign_up"


    const val PROFILE_SCREEN_SIGN_OUT_BTN = "prfile_scrn_sign_out"

    const val CONTINUE_ANONYMOUSLY = "continue_anon"
    const val MAP_TAG = "map_tag"

}